Item 107 review: the header's ordering contract was false
Review fix 1. `directory(Pageable, DirectoryFilter)` built the restrictions in
an EnumSet — with a comment saying declaration order was the point — and then
handed them out through `Set.copyOf`, which does not preserve order. For two
elements that is an `ImmutableCollections.Set12` whose iteration order comes
from a per-JVM SALT. Re-derived rather than taken on trust: the real enum and
the real `token()` through ten separate JVM starts on this project's JDK gave
six `caseAssignments,lastActivity` and four the reverse, while `EnumSet.copyOf`
held in all ten. So `RESTRICTED_PARTS`'s javadoc — "in enum declaration order
so the header is byte-stable between requests" — was true only within one JVM
run, and the value would have flipped between restarts of the api container and
between replicas. The natural thing for item 114 to write in `web/` is
`header === 'caseAssignments,lastActivity'`, which would have passed review and
failed on roughly half of deploys.

Now `Collections.unmodifiableSet(EnumSet.copyOf(restrictions))`, with the local
declared as `EnumSet` rather than `Set`. That static type is load-bearing: it
selects the `copyOf(EnumSet)` overload at compile time, which cannot throw —
its `Collection` sibling rejects an empty argument, which is the
no-restrictions case and so almost every request. A copy rather than the live
set, so a caller cannot mutate what the service still holds.

Review fix 2. The existing ordering test constructed `Directory` in the test
and so never crossed the copy the service makes on the way out, and no test had
both parts restricted at once. `bothPartsRefusedRenderINdeclarationOrder_
throughTheRealService` wires the real service over mocked collaborators and
drives the one input that reaches this: a technician with at least one task,
refused both `/api/clinical-cases` and `/api/activity-logs`. The task is
load-bearing — with none, composition returns before the activity log is as